FIX: Template Render
  Fixed the issue preventing the rendering of the template. However,
  the side effect of the other changes of using Namespace objects and
  attaching them to the Class object (String) results in some more work
  that is need to prune the tree for displaying later.

  However, the context template is not displaying at all.

--- a/lib/templates/default/module/html/specs.erb
+++ b/lib/templates/default/module/html/specs.erb
@@ -6,8 +6,11 @@
      <% log.info "Displaying the Context Info #{options}" %>
      <% old_object = options[:object] 
      options[:object] = context
+     
+     
      %>
      <% T('context') %>
+     <% options[:object] = old_object %>
    <% end %>
 </div>
 </div>
