CSS, JS, and search fields
  Updated to be a little more clear what is taking place. To allow for
  multiple plugins to play nicely layout/html/setup.rb is calling super on
  the javascript, stylesheets, and search fields. If they do not exist then
  this is the only plugin agreeing to this convention and we should default
  to the existing css, js, and search fields

--- a/lib/templates/default/layout/html/search.erb
+++ b/lib/templates/default/layout/html/search.erb
@@ -1,5 +1,5 @@
 <div id="search">
-  <% search_fields.each do |id,name| %>
-  <a id="<%= id %>" href="#"><%= name %></a>
+  <% search_fields.each do |field| %>
+  <a id="<%= field[:type] %>_list_link" href="#"><%= field[:search_title] %></a>
   <% end %>
 </div>
