--- a/lib/templates/default/layout/html/headers.erb
+++ b/lib/templates/default/layout/html/headers.erb
@@ -1,7 +1,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=<%= charset %>" />
 <title><%= @page_title %></title>
-<link rel="stylesheet" href="<%= url_for("css/style.css") %>" type="text/css" media="screen" charset="utf-8" />
-<link rel="stylesheet" href="<%= url_for("css/common.css") %>" type="text/css" media="screen" charset="utf-8" />
+<% stylesheets.each do |stylesheet| %>
+  <link rel="stylesheet" href="<%= url_for(stylesheet) %>" type="text/css" media="screen" charset="utf-8" />
+<% end %>
 <% if @extra_css %>
   <link rel="stylesheet" href="<%= url_for @extra_css %>" type="text/css" media="screen" charset="utf-8" />
 <% end %>
@@ -9,6 +10,6 @@
   relpath = '<%= url_for('') %>';
   if (relpath != '') relpath += '/';
 </script>
-<% javascript_files.each do |js_file| %>
+<% javascripts.each do |js_file| %>
   <script type="text/javascript" charset="utf-8" src="<%= url_for(js_file) %>"></script>
 <% end %>
