All Specs Page (with style)
  Added style around the contexts and specifications so that when they are
  displayed in a readable fashion. Currently the entire details about the spec
  are shown when likely, in the future, a link to the particular spec will be
  present

--- a/lib/templates/default/specs/html/contexts.erb
+++ b/lib/templates/default/specs/html/contexts.erb
@@ -1,13 +1,7 @@
-<% @contexts.each do |context| %>
-  <div>
-    <div><%= context.value %></div>
-    <div>
-      <% if context.children && !context.children.empty? %>
-        <% context.children.each do |child| %>
-          <%= child.value %>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-
-<% end %>
+<div>
+  <div>Contexts</div>
+  <% @contexts.each do |context| %>
+    <% @context = context %>
+    <%= erb :context %>
+  <% end %>
+</div>
