--- a/lib/templates/default/context/html/specification.erb
+++ b/lib/templates/default/context/html/specification.erb
@@ -3,5 +3,10 @@
     <span class="predicate">it</span>
     <%= specification.value %>
   </div>
+  
+  <div class="meta">
+    <div class="file developer"><%= h specification.file %>:<%= specification.line %></div>
+    <div style="clear: right;"></div>
+  </div>
   <!-- <div><%= specification.source %></div> -->
 </div>
