--- a/lib/templates/default/context/html/describe.erb
+++ b/lib/templates/default/context/html/describe.erb
@@ -8,14 +8,14 @@
     <div style="clear: right;"></div>
   </div>
   
-  <% row = 'odd' %>
+  <% @row = 'odd' %>
   
   <ul class='context-specifications'>
     <% context.specifications.each do |it| %>
       <% @specification = it %>
-      <li class='context-specification <%= row %>'><%= erb :specification %></li>
+      <li class='context-specification'><%= erb :specification %></li>
       
-      <% row = (row == 'odd' ? 'even' : 'odd') %>
+      <% @row = (@row == 'odd' ? 'even' : 'odd') %>
     <% end %>
   </ul>
   
@@ -23,10 +23,10 @@
   <% context.subcontexts.each do |subcontext| %>
     <% @context = subcontext %>
     
-    <li class='<%= row %>'><%= erb :describe %></li>
+    <li><%= erb :describe %></li>
     
     <% @context = subcontext.owner %>
-    <% row = (row == 'odd' ? 'even' : 'odd') %>
+    <% @row = (@row == 'odd' ? 'even' : 'odd') %>
   <% end %>
   </ul>
 </div>
