--- a/lib/templates/default/fulldoc/html/css/rspec.css
+++ b/lib/templates/default/fulldoc/html/css/rspec.css
@@ -1,20 +1,29 @@
 
-.context .title { padding: 10px; font-size: 24px; margin: 20px 0px 10px 20px; padding-left: 0px; border-bottom: 1px solid #E3E3E3; }
+.context .title { 
+    padding: 10px; padding-left: 0px; 
+    margin: 20px 0px 10px 20px; 
+    font-size: 24px; 
+    border-bottom: 1px solid #E3E3E3;
+    height: 25px;
+}
 
-.context .meta .file { color: gray; float: right; margin-right: 20px; }
+.context .meta .file { color: gray; float: right; margin-right: 10px; }
 
 .context ul { list-style: none; padding-left: 20px; }
  
 .context-subcontext .title {
-    font-size: 1.1em; font-weight: normal; font-family: Monaco, Consolas, Courier, monospace;
-    font-weight: bold;
-    color: #3F3F3F;
     padding: 6px 10px; margin-top: 18px;
     background: #e5e8ff; border: 1px solid #d8d8e5; -moz-border-radius: 3px; -webkit-border-radius: 3px;
+    color: #3F3F3F;
+    font-size: 1.1em; font-weight: normal; font-family: Monaco, Consolas, Courier, monospace;
+    font-weight: bold;
+    height: 20px;
 }
 
+.file { margin-top: 5px; }
+
 .context-specifications { }
-.context-specification { }
+.context-specification { padding: 4px; }
 
 .specification { padding: 5px; font-size: 14px; font-weight: bold;  }
  .method_details_list { margin: 10px 0px 10px 5px; }
