Specifications in Method Template
  Added the specs back to the method template, now that they are linked.
  However, they appear twice in the list

--- a/lib/templates/default/method_details/html/specs.erb
+++ b/lib/templates/default/method_details/html/specs.erb
@@ -2,7 +2,14 @@
 <div class="method_details_list">
 <div class="tags">
   <h3>Specifications:</h3>
-  <% yieldall :object => contexts %>
+  <ul>
+  <% contexts.each do |context| %>
+    <% context.specifications.each do |spec| %>
+    <li><%= spec.value %></li>
+    
+    <% end %>
+  <% end %>
+  </ul>
 </div>
 </div>
 <% end %>
