Linked sub-context to the paired method
  + created a link from the context value to the class/module method
  + changed the css to make the pointer the entire bar
  + changed the js to make the area to expand the entire bar

--- a/lib/templates/default/context/html/describe.erb
+++ b/lib/templates/default/context/html/describe.erb
@@ -1,6 +1,6 @@
 <div class='context'>
   <div class='title'>
-    <span style="float:left;"><%= h context.value %></span>
+    <span style="float:left;"><%= link_to_code_object context %></span>
     <div class="meta">
       <div class="file"><%= h context.file %>:<%= context.line %></div>
     </div>
