Contexts and Specifications have unique ids
  + generating and dropping an anchor for the unique_ids for a
    context and a specification

--- a/lib/templates/default/context/html/describe.erb
+++ b/lib/templates/default/context/html/describe.erb
@@ -1,5 +1,6 @@
 <div class='context'>
   <div class='title'>
+    <a name="<%= context.unique_id %>"></a>
     <span style="float:left;"><%= link_to_code_object context %></span>
     <div class="meta">
       <div class="file"><%= h context.file %>:<%= context.line %></div>
