--- a/lib/templates/default/context/html/specification.erb
+++ b/lib/templates/default/context/html/specification.erb
@@ -1,5 +1,6 @@
 <div class="specification">
   <div class="heading <%= row %>">
+    <a name="<%= specification.unique_id %>"></a>
     <span class="predicate">it</span>
     <%= specification.value %>
   </div>
