Spec source displayed inline
  + specs are displayed inline with with a [view source] option

--- a/lib/templates/default/method_details/html/specs.erb
+++ b/lib/templates/default/method_details/html/specs.erb
@@ -4,8 +4,31 @@
   <h3>Specifications:</h3>
   <ul>
   <% contexts.each do |context| %>
-   <% context.specifications.each do |spec| %>
-     <li><%= link_to_full_specification spec %></li>
+    <% context.specifications.each do |spec| %>
+      <li>
+       <span class="predicate">it</span>
+       <%= spec.value %>
+      </li>
+      <div class="details">
+
+        <!-- Source Code -->
+        <div style="float: left;">
+          <table class="source_code">
+            <tr>
+              <td>
+                <pre class="lines"><%= "" %><%= h format_lines(spec) %></pre>
+              </td>
+              <td>
+                <pre class="code"><%= "" %><%= html_syntax_highlight spec.source %></pre>
+              </td>
+            </tr>
+          </table>
+        </div>
+
+        <div style="clear: both;"></div>
+
+      </div>
+
    <% end %>
  <% end %>
  </ul>
