Rspec Failures Displayed
  Rspec failures are poorly mapped and displayed
  with the specification. This is solely in the full view
  and not the in-line view

--- a/lib/templates/default/context/html/specification.erb
+++ b/lib/templates/default/context/html/specification.erb
@@ -3,6 +3,10 @@
     <a name="<%= specification.unique_id %>"></a>
     <span class="predicate">it</span>
     <%= specification.value %>
+    <% if failure(specification) %>
+      (FAILED - <%= failure(specification).name %>)
+    <% end %>
+    
   </div>
 
   <div class="details">
@@ -25,7 +29,7 @@
     <div class="meta">
       <div class="file" style="margin-top: 5px;"><%= h specification.file %>:<%= specification.line %></div>
     </div>
-
+    
     <div style="clear: both;"></div>
     
   </div>
