RSpec Failures Inline
  Failures appear inline with the same poor logic duplicated

--- a/lib/templates/default/method_details/html/specs.erb
+++ b/lib/templates/default/method_details/html/specs.erb
@@ -8,6 +8,10 @@
       <li>
        <span class="predicate">it</span>
        <%= spec.value %>
+       <% if failure(spec) %>
+         (FAILED - <%= failure(spec).name %>)
+       <% end %>
+      
       </li>
       <div class="details">
 
