--- a/lib/templates/default/method_details/html/specs.erb
+++ b/lib/templates/default/method_details/html/specs.erb
@@ -20,37 +20,25 @@
           <table class="source_code">
             <tr>
               <td>
-                
                 <pre class="lines"><%= "" %><%= h format_lines(spec) %></pre>
               </td>
               <td>
                 <pre class="code"><%= "" %><%= html_syntax_highlight spec.source %></pre>
               </td>
             </tr>
-          </table>
-        </div>
-
-        <div style="clear: both;"></div>
-        
-        <% if failure(spec) %>
-        
-        <!-- Error Message -->
-        <div style="float: left;">
-          <table class="source_code">
+            <% if failure(spec) %>
             <tr>
-              <td>
-                <pre class="lines"><%= "" %><%= h format_lines(failure(spec)) %></pre>
-              </td>
-              <td>
+              <td></td>
+              <td>Failure:
                 <pre class="code"><%= "" %><%= html_syntax_highlight failure(spec).message.join("\n") %></pre>
               </td>
             </tr>
+            <% end %>
           </table>
         </div>
 
         <div style="clear: both;"></div>
         
-        <% end %>
       </div>
 
    <% end %>
